# TestSite

bg2e-modified/src/: CMakeLists.txt  engine.cpp  log.cpp
bg2e-modified/src/android/: app.cpp  asset.cpp  gles_context.cpp
bg2e-modified/src/audio/: buffer.cpp  context.cpp  device.cpp  source.cpp
bg2e-modified/src/audio/empty-impl/: buffer.cpp  context.cpp  device.cpp  source.cpp
bg2e-modified/src/audio/opensl/: engine_opensl.cpp  sound.cpp
bg2e-modified/src/base/: buffer_base.cpp  command_queue.cpp  effect.cpp  event_handler.cpp  exception.cpp  fps_counter.cpp  image.cpp  light.cpp  material.cpp  object_registry.cpp  pipeline.cpp  poly_list.cpp  referenced_pointer.cpp  render_surface.cpp  texture.cpp  texture_effect.cpp  vwglb-utils.cpp
bg2e-modified/src/base/android/: image.cpp
bg2e-modified/src/base/ios/: image.mm
bg2e-modified/src/base/mac/: image.mm
bg2e-modified/src/base/windows/: image_win.cpp
bg2e-modified/src/db/: audio_db.cpp  drawable_db.cpp  font_db.cpp  node_db.cpp  texture_db.cpp  ui_skin.cpp
bg2e-modified/src/db/bg2/: bg2_file_reader.cpp  bg2_file_writer.cpp
bg2e-modified/src/db/json/: convert.cpp  escaper.cpp  value.cpp
bg2e-modified/src/db/plugin/: bg2_drawable.cpp  bg2_prefab.cpp  bg2_scene.cpp  bg2_skin_plugin.cpp  obj_drawable.cpp  true_type_font.cpp  wav_audio.cpp
bg2e-modified/src/engine/: command_queue_impl.cpp  directx11.cpp  effect_impl.cpp  ogl_includes.cpp  opengl_core.cpp  opengl_es_3.cpp  pipeline_impl_base.cpp  poly_list_impl_base.cpp  texture_impl.cpp  vulkan.cpp
bg2e-modified/src/engine/directx11/: pipeline_impl_dx11.cpp  poly_list_impl_dx11.cpp  render_surface_impl_dx11.cpp  shader_dx11.cpp  texture_impl_dx.cpp
bg2e-modified/src/engine/openglCore/: opengl_state.cpp  pipeline_impl_glcore.cpp  poly_list_impl_glcore.cpp  render_surface_impl_glcore.cpp  shader_glcore.cpp  texture_impl_glcore.cpp
bg2e-modified/src/engine/openglEs/: pipeline_impl_gles.cpp  poly_list_impl_gles.cpp  render_surface_impl_gles.cpp  render_surface_impl_gles_ios.mm  shader_gles.cpp  texture_impl_gles.cpp
bg2e-modified/src/engine/vulkan/: buffer_helper.cpp  command_buffer_helper.cpp  command_queue_impl_vulkan.cpp  context_tools.cpp  debug_tools.cpp  device_tools.cpp  effect_impl_vulkan.cpp  framebuffer_helper.cpp  offscreen_render_framebuffer.cpp  offscreen_renderer.cpp  physical_device_helper.cpp  pipeline_layout_manager.cpp  poly_list_impl_vulkan.cpp  (+8 more)
bg2e-modified/src/fx/: color_picker_fx.cpp  deferred_mix_fx.cpp  diffuse_texture_fx.cpp  forward.cpp  forward_dx.cpp  forward_glcore.cpp  gbuffer.cpp  gbuffer_float.cpp  gbuffer_ubyte.cpp  gui_rect.cpp  lighting_fx.cpp  renderer_fx.cpp  shadow_fx.cpp  shadow_map_fx.cpp  ssao_fx.cpp  ssrt_fx.cpp  texture_fx.cpp  texture_fx_dx11.cpp  texture_fx_glcore.cpp
bg2e-modified/src/gui/: button.cpp  check_box.cpp  image_button.cpp  label.cpp  layout.cpp  radio_button.cpp  scroll_control.cpp  spin_button.cpp  surface.cpp  text_input.cpp  toolbar_button.cpp  view.cpp  window_gui.cpp
bg2e-modified/src/ios/: BGGLViewController.mm  gles_context.cpp  gles_context.mm
bg2e-modified/src/lua/: base.cpp
bg2e-modified/src/manipulation/: find_pick_id_visitor.cpp  mouse_picker.cpp  orbit_node_controller.cpp  selectable.cpp
bg2e-modified/src/math/: utils.cpp
bg2e-modified/src/net/: download.cpp  download_queue.cpp  net.cpp  session.cpp  socket.cpp  stream_socket.cpp  url.cpp
bg2e-modified/src/physics/: box_collider_shape.cpp  btShapeHull.cpp  collider_shape.cpp  convex_hull_collider_shape.cpp  intersection.cpp  ray.cpp  rigid_body.cpp  sphere_collider_shape.cpp  world.cpp
bg2e-modified/src/render/: deferred_render_layer.cpp  deferred_render_surfaces.cpp  deferred_renderer.cpp  forward_render_layer.cpp  forward_renderer.cpp  low_overhead_forward_renderer.cpp  low_overhead_pipeline.cpp  render_layer.cpp  renderer.cpp  shader_input_manager.cpp  shader_inputs.cpp  shadow_map.cpp  update_visitor.cpp  vulkan_low_overhead_pipeline.cpp  vulkan_shader_inputs.cpp
bg2e-modified/src/scene/: audio_listener.cpp  audio_source.cpp  camera.cpp  chain.cpp  collider.cpp  component.cpp  cubemap.cpp  draw_visitor.cpp  drawable.cpp  dynamics.cpp  frame_visitor.cpp  input_visitor.cpp  light_scene.cpp  node.cpp  node_visitor.cpp  primitive_factory.cpp  render_queue_visitor.cpp  rigid_body_comp.cpp  scene_object.cpp  skybox.cpp  transform.cpp  transform_visitor.cpp
bg2e-modified/src/shader/: color_correction.cpp  lighting.cpp  utils_shader.cpp
bg2e-modified/src/system/: archive.cpp  path.cpp  system.cpp  utf.cpp
bg2e-modified/src/text/: font.cpp  glyph.cpp  string_renderer.cpp  text_rect.cpp
bg2e-modified/src/tools/: bounding_box.cpp  drawable_tools.cpp  material_tools.cpp  poly_list_cache.cpp  poly_list_primitives.cpp  poly_list_tools.cpp  shader_source.cpp  texture_cache.cpp  texture_frame.cpp  uuid.cpp
bg2e-modified/src/wnd/: cocoa_file_dialog.cpp  cocoa_file_dialog.mm  cocoa_menu.cpp  cocoa_popup_menu.mm  directx_context.cpp  file_dialog.cpp  main_loop.cpp  popup_menu.cpp  vk_context.cpp  win32_file_dialog.cpp  win32_popup_menu.cpp  window.cpp  window_controller.cpp
bg2e-modified/src/wnd-touch/: cocoa_file_dialog.cpp  cocoa_gl_context.cpp  cocoa_popup_menu.cpp  cocoa_window.cpp  directx_context.cpp  file_dialog.cpp  main_loop.cpp  message_box.cpp  popup_menu.cpp  win32_file_dialog.cpp  win32_gl_context.cpp  win32_popup_menu.cpp  win32_window.cpp  window.cpp  window_controller.cpp
(+451 files in other folders)
